--- a/qshields.cfg
+++ b/qshields.cfg
@@ -7,21 +7,18 @@ Local_Storage_Dir: /scratch/hep/maruyama/cjd62/Test
 
 
 [qshields_options]
-Source: -G /home/hep/maruyama/cjd62/CUORE/Simulations/th232_all		
 # Include '-' for the types, e.g. "-e 10"
-Source_Location: -W \(0,0,52\) -P\(29.5,0,0\) -W\(0,0,52\) -P\(-29.5,0,0\)	
+Source: -G /home/hep/maruyama/cjd62/CUORE/Simulations/th232_all
 # Where the sources are to be located. Include '-' and '\(', e.g. "-W\(0,0,52\)"
-Total_Number_Of_Events: 3174678491
+Source_Location: -W \(0,0,52\) -P\(29.5,0,0\) -W\(0,0,52\) -P\(-29.5,0,0\)	
 # Total number of events to be distributed to jobs. Can be number, e.g. "10000000", or scientific notation "1e7"
-#Local_Output_Dir: /scratch/hep/maruyama/cjd62/CUORE0/Simulation/LowEThreshold_v4/DS2139
-Local_Output_Dir: /scratch/hep/maruyama/cjd62/Test
-Other_qshields_Parameters:
+Total_Number_Of_Events: 3174678491
 # Any additional parameters to be run
-qshields_Location: MCuoreZ-t16.03	
+Other_qshields_Parameters:
 # Name of qshields in your /cuoremc/bin
-Simulation_Name: DS2139
+qshields_Location: MCuoreZ-t16.03	
 # Name of the simulation output.root files
-
+Simulation_Name: DS2139
 
 [g4cuore_options]
 # /path/to/ g4cuore version
@@ -33,66 +30,66 @@ Input_File_List: ${qshields_options:Simulation_Name}
 # Number of files to use
 Input_File_List_Size: ${queue_options:Number_Of_Jobs}
 # Destination of g4cuore output file on your local machine
-Output_File: {general_options:Local_Script/{qshields_options:Simulation_Name}_g4cuore.root
-Coincidence_Time: 0.01
+Output_File: {general_options:Local_Script}/{qshields_options:Simulation_Name}_g4cuore.root
 # -d option. Do not include '-'
-Integration_Time: 0.01			
+Coincidence_Time: 0.01
 # -D option. Do not include '-'
-Excluded_Channels:		
+Integration_Time: 0.01
 # -e option. Do not include '-'. If multiple parameters, separate with ',' and no whitespace. Can also use path to properly formatted file
-Dead_Time: 1
+Excluded_Channels:
 # -E option. Do not include '-'
-Pile_Up: 4,3.1
+Dead_Time: 1
 # -t option. Do not include '-'. If multiple parameters, separate with ','
-Multiplicity_Distance_Cut:
+Pile_Up: 4,3.1
 # -G option. Do not include '-'
-Event_Rate: 96.55		
+Multiplicity_Distance_Cut:
 # -r option. Do not include '-'
-Threshold: 0,0
+Event_Rate: 96.55
 # -T option. Do not include '-'. Separate with ',' and no whitespace. Can also use path to properly formatted file
-Resolution: 0,0				
+Threshold: 0,0
 # -R option. Do not include '-'. Separate with ',' and no whitespace. Can also use path to properly formatted file
-Other_g4cuore_Parameters: 		
-# Any additional parameters to be run. Include '-'
+Resolution: 0,0
+# Any additional parameters to be run. Include '-'				
+Other_g4cuore_Parameters: 
 
 [queue_options]
-Batch_Scheduler: PBS			
 # Which batch scheduler to submit jobs to. Currently only supported for PBS
-Queue: hep	 			
+Batch_Scheduler: PBS			
 # Name of the queue to submit to
-Number_Of_Jobs: 750
+Queue: hep
 # Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time. It is also recommended to use <800 since hadd can run into issues with too many files.
-Job_Name: CUORE0_DS2139_C_MC
+Number_Of_Jobs: 750
 # Name of the job in the queue.
-Root_Output_Dir: ${general_options:Local_Storage_Dir}/root_files	
+Job_Name: CUORE0_DS2139_C_MC
 # Where the output ROOT files will go
-Log_File_Dir: ${general_options:Local_Storage_Dir}/log			
+Root_Output_Dir: ${general_options:Local_Storage_Dir}/root_files
 # Where the Stderr and Stdout files will be placed
+Log_File_Dir: ${general_options:Local_Storage_Dir}/log			
+# Walltime for each job
 Walltime: 10:00:00
-# Walltime for the job
+# ae gives emails at the end and if an error occurs. b sends emails when the job starts
 Email_From_Host: ae
-# ae gives emails at the end and if an error occurs
-User_Email: christopher.davis@yale.edu
 # user email. !!!!!CHANGE THIS FOR YOUR EMAIL ADDRESS. I DON'T WANT YOUR EMAILS!!!!!
+User_Email: christopher.davis@yale.edu
 
 [database_options]
-Send_Output_To_DB: no
 # "yes means send to a DB for storage (for production MC). "no" means the file will not be added to a database
-DB_Location: DB.Location.Here		
+Send_Output_To_DB: no
 # Location of the database
-DB_Username: cuore			
+DB_Location: DB.Location.Here
 # your username
-Cluster_Used: Yale_HPC			
+DB_Username: cuore			
 # Which cluster made the MC (Yale_HPC, CNAF, ULITE, PDSF, etc.)
-User_Name: Christopher Davis		
+Cluster_Used: Yale_HPC			
 # Your name
-Git_Commit_Hash: a3k24dfsajkl202eiwx92ns83n   
+User_Name: Christopher Davis		
 # Git commit hash (if not 'tag' version)
-Git_Tag_Version: no			       
+Git_Commit_Hash: a3k24dfsajkl202eiwx92ns83n   
 # "yes" means that a tagged version of qshields was used. No means use the commit hash
-Git_Tag_Name: 16.03			       
+Git_Tag_Version: no			       
 # name of the Git tag version
-qshields_Storage_Location: ULITE:/nfs/cuore1/simulation/CUORE/	 
+Git_Tag_Name: 16.03			       
 # Where the file is currently hosted
-Comments: Description of the simulation			 
+qshields_Storage_Location: ULITE:/nfs/cuore1/simulation/CUORE/	 
 # Describe the simulation
+Comments: Description of the simulation			 
