Added time delays to output to assist with readability.
Added messages for directory creation.

--- a/qshields.cfg
+++ b/qshields.cfg
@@ -12,13 +12,13 @@ Source: -G /home/hep/maruyama/cjd62/CUORE/Simulations/th232_all
 # Where the sources are to be located. Include '-' and '\(', e.g. "-W\(0,0,52\)"
 Source_Location: -W \(0,0,52\) -P\(29.5,0,0\) -W\(0,0,52\) -P\(-29.5,0,0\)	
 # Total number of events to be distributed to jobs. Can be number, e.g. "10000000", or scientific notation "1e7"
-Total_Number_Of_Events: 3174678491
+Total_Number_Of_Events: 1e7
 # Any additional parameters to be run
 Other_qshields_Parameters:
 # Name of qshields in your /cuoremc/bin
 qshields_Location: MCuoreZ-t16.03
 # Name of the simulation output.root files
-Simulation_Name: DS2139
+Simulation_Name: Script_Testing
 
 [g4cuore_options]
 # /path/to/ g4cuore version
@@ -58,15 +58,15 @@ Batch_Scheduler: PBS
 # Name of the queue to submit to
 Queue: hep
 # Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time. It is also recommended to use <800 since hadd can run into issues with too many files.
-Number_Of_Jobs: 750
+Number_Of_Jobs: 10
 # Name of the job in the queue.
-Job_Name: CUORE0_DS2139_C_MC
+Job_Name: ${qshields_options:Simulation_Name}
 # Where the output ROOT files will go
 Root_Output_Dir: ${general_options:Local_Storage_Dir}/root_files
 # Where the Stderr and Stdout files will be placed
 Log_File_Dir: ${general_options:Local_Storage_Dir}/log			
 # Walltime for each job
-Walltime: 10:00:00
+Walltime: 2:00:00
 # ae gives emails at the end and if an error occurs. b sends emails when the job starts
 Email_From_Host: ae
 # user email. !!!!!CHANGE THIS FOR YOUR EMAIL ADDRESS. I DON'T WANT YOUR EMAILS!!!!!
