Fixed config file

--- a/qshields.cfg
+++ b/qshields.cfg
@@ -29,7 +29,7 @@ Input_File_List: ${qshields_options:Simulation_Name}
 # Number of files to use
 Input_File_List_Size: ${queue_options:Number_Of_Jobs}
 # Destination of g4cuore output file on your local machine
-Output_File: {general_options:Local_Script}/{qshields_options:Simulation_Name}_g4cuore.root
+Output_File: ${general_options:Local_Script_Dir}/${qshields_options:Simulation_Name}_g4cuore.root
 # -d option. Do not include '-'
 Coincidence_Time: 0.01
 # -D option. Do not include '-'
