--- a/qshields.cfg
+++ b/qshields.cfg
@@ -19,6 +19,9 @@ qshields_Location: MCuoreZ-t16.03
 # Name of the simulation output.root files
 Simulation_Name: Script_Testing
 
+# Syntax for options:
+	# 1) If unused, leave blank.
+	# 2) If used, write as (ignoring quotes) "-r 98", where -r is for the option name
 [g4cuore_options]
 # /path/to/ g4cuore version
 g4cuore_Location = g4cuore-t16.03
@@ -30,25 +33,25 @@ Input_File_List: ${qshields_options:Simulation_Name}
 Input_File_List_Size: ${queue_options:Number_Of_Jobs}
 # Destination of g4cuore output file on your local machine
 Output_File: ${general_options:Local_Script_Dir}/${qshields_options:Simulation_Name}_g4cuore.root
-# -d option. Do not include '-'
-Coincidence_Time: 0.01
-# -D option. Do not include '-'
-Integration_Time: 0.01
-# -e option. Do not include '-'. If multiple parameters, separate with ',' and no whitespace. Can also use path to properly formatted file
+# -d option
+Coincidence_Time: -d 0.01
+# -D option
+Integration_Time: -D 0.01
+# -e option. If multiple parameters, separate with ',' and no whitespace. Can also use path to properly formatted file
 Excluded_Channels:
-# -E option. Do not include '-'
-Dead_Time: 1
-# -t option. Do not include '-'. If multiple parameters, separate with ','
-Pile_Up: 4,3.1
-# -G option. Do not include '-'
+# -E option
+Dead_Time: -E 1
+# -t option. If multiple parameters, separate with ','
+Pile_Up: -t 4,3.1
+# -G option
 Multiplicity_Distance_Cut:
-# -r option. Do not include '-'
-Event_Rate: 96.55
-# -T option. Do not include '-'. Separate with ',' and no whitespace. Can also use path to properly formatted file
-Threshold: 0,0
-# -R option. Do not include '-'. Separate with ',' and no whitespace. Can also use path to properly formatted file
-Resolution: 0,0
-# Any additional parameters to be run. Include '-'				
+# -r option
+Event_Rate: -r 96.55
+# -T option. Separate with ',' and no whitespace. Can also use path to properly formatted file
+Threshold: -T 0,0
+# -R option. Separate with ',' and no whitespace. Can also use path to properly formatted file
+Resolution: -R 0,0
+# Any additional parameters to be run				
 Other_g4cuore_Parameters: 
 
 [queue_options]
