Mongo Client added. Talks to database and sends information about the code.
Needs to be fixed: Removing "\" from input file and code needs to be added to add it to the scripts, but leave it out of the DB entry.

--- a/qshields.cfg
+++ b/qshields.cfg
@@ -1,15 +1,15 @@
 [general_options]
 # options to help place files in organized directories. Can be manually edited later on.
 # Where to store the scripts to be run
-Local_Script_Dir: /home/hep/maruyama/cjd62/CUORE/Simulations/Scripts/Test/
+Local_Script_Dir: /home/cjdavis62/Git/Geant4_HPC_Scripting/DBTest
 # Where to store the output ROOT files
-Local_Storage_Dir: /scratch/hep/maruyama/cjd62/Test
+Local_Storage_Dir: /home/cjdavis62/Git/Geant4_HPC_Scripting/DBTest
 
 [qshields_options]
 # Include '-' for the types, e.g. "-e 10"
 Source: -G /home/hep/maruyama/cjd62/CUORE/Simulations/th232_all
-# Where the sources are to be located. Include '-' and '\(', e.g. "-W\(0,0,52\)"
-Source_Location: -W \(0,0,52\) -P\(29.5,0,0\) -W\(0,0,52\) -P\(-29.5,0,0\)	
+# Where the sources are to be located. Include '-', but do not include '\' before '(', e.g. "-W(0,0,52)"
+Source_Location: -W (0,0,52) -P(29.5,0,0) -W(0,0,52) -P(-29.5,0,0)
 # Total number of events to be distributed to jobs. Can be number, e.g. "10000000", or scientific notation "1e7"
 Total_Number_Of_Events: 1e7
 # Any additional parameters to be run
@@ -76,9 +76,9 @@ User_Email: christopher.davis@yale.edu
 
 [database_options]
 # "yes means send to a DB for storage (for production MC). "no" means the file will not be added to a database
-Send_Output_To_DB: no
+Send_Output_To_DB: yes
 # Location of the database
-DB_Location: DB.Location.Here
+DB_Location: localhost
 # your username
 DB_Username: cuore
 # Which cluster made the MC (Yale_HPC, CNAF, ULITE, PDSF, etc.)
@@ -88,10 +88,10 @@ User_Name: Christopher Davis
 # Git commit hash (if not 'tag' version)
 Git_Commit_Hash: a3k24dfsajkl202eiwx92ns83n
 # "yes" means that a tagged version of qshields was used. No means use the commit hash
-Git_Tag_Version: no
+Git_Is_Tag_Version: yes
 # name of the Git tag version
-Git_Tag_Name: 16.03			       
+Git_Tag_Name: 16.03
 # Where the file is currently hosted
-qshields_Storage_Location: ULITE:/nfs/cuore1/simulation/CUORE/	 
+qshields_Storage_Location: ULITE:/nfs/cuore1/simulation/CUORE/path/to/${qshields_options:simulation_name}
 # Describe the simulation
-Comments: Description of the simulation			 
+Comments: Description of the simulation
