Fix for the backslash issue

--- a/qshields.cfg
+++ b/qshields.cfg
@@ -8,8 +8,8 @@ Local_Storage_Dir: /home/cjdavis62/Git/Geant4_HPC_Scripting/DBTest
 [qshields_options]
 # Include '-' for the types, e.g. "-e 10"
 Source: -G /home/hep/maruyama/cjd62/CUORE/Simulations/th232_all
-# Where the sources are to be located. Include '-', but do not include '\' before '(', e.g. "-W(0,0,52)"
-Source_Location: -W (0,0,52) -P(29.5,0,0) -W(0,0,52) -P(-29.5,0,0)
+# Where the sources are to be located. Include '-' and '\' before '(', e.g. '-W\(0,0,52\)'
+Source_Location: -W\(0,0,52\) -P\(29.5,0,0\) -W\(0,0,52\) -P\(-29.5,0,0\)
 # Total number of events to be distributed to jobs. Can be number, e.g. "10000000", or scientific notation "1e7"
 Total_Number_Of_Events: 1e7
 # Any additional parameters to be run
@@ -22,6 +22,7 @@ Simulation_Name: Script_Testing
 # Syntax for options:
 	# 1) If unused, leave blank.
 	# 2) If used, write as (ignoring quotes) "-r 98", where -r is for the option name
+
 [g4cuore_options]
 # /path/to/ g4cuore version
 g4cuore_Location = g4cuore-t16.03
