Connection works for usernames and whatnot. Need to find a more secure solution

--- a/qshields.cfg
+++ b/qshields.cfg
@@ -86,6 +86,8 @@ DB_Username: cuore
 Cluster_Used: Yale_HPC
 # Your name
 User_Name: Christopher Davis
+# Date the MC was generated: DD:MM:YEAR
+Date_Generated: 
 # Git commit hash (if not 'tag' version)
 Git_Commit_Hash: a3k24dfsajkl202eiwx92ns83n
 # "yes" means that a tagged version of qshields was used. No means use the commit hash
