Options for doing qshields, g4cuore, and/or DB writing

--- a/qshields.cfg
+++ b/qshields.cfg
@@ -4,6 +4,10 @@
 Local_Script_Dir: /home/cjdavis62/Git/Geant4_HPC_Scripting/DBTest
 # Where to store the output ROOT files
 Local_Storage_Dir: /home/cjdavis62/Git/Geant4_HPC_Scripting/DBTest
+Write_qshields: yes
+Write_g4cuore: no
+Write_to_DB: yes
+
 
 [qshields_options]
 # Include '-' for the types, e.g. "-e 10"
@@ -76,8 +80,6 @@ Email_From_Host: ae
 User_Email: christopher.davis@yale.edu
 
 [database_options]
-# "yes means send to a DB for storage (for production MC). "no" means the file will not be added to a database
-Send_Output_To_DB: yes
 # Location of the database
 DB_Location: localhost
 # your username
