added section for when the simulation was generated.

--- a/qshields.cfg
+++ b/qshields.cfg
@@ -89,7 +89,7 @@ Cluster_Used: Yale_HPC
 # Your name
 User_Name: Christopher Davis
 # Date the MC was generated: DD:MM:YEAR
-Date_Generated: 
+Date_Generated: 14:09:2016
 # Git commit hash (if not 'tag' version)
 Git_Commit_Hash: a3k24dfsajkl202eiwx92ns83n
 # "yes" means that a tagged version of qshields was used. No means use the commit hash
