Changed to CUORE Password

--- a/qshields.cfg
+++ b/qshields.cfg
@@ -5,7 +5,7 @@ Local_Script_Dir: /home/cjdavis62/Git/Geant4_HPC_Scripting/DBTest
 # Where to store the output ROOT files
 Local_Storage_Dir: /home/cjdavis62/Git/Geant4_HPC_Scripting/DBTest
 Write_qshields: yes
-Write_g4cuore: no
+Write_g4cuore: yes
 Write_to_DB: yes
 
 
