--- a/qshields.cfg
+++ b/qshields.cfg
@@ -10,6 +10,8 @@ Write_to_DB: yes
 
 
 [qshields_options]
+qshields_Script_Dir: ${general_options:Local_Script_Dir}/qshields
+qshields_Storage_Dir: ${general_options:Local_Storage_Dir}/qshields
 # Include '-' for the types, e.g. "-e 10"
 Source: -G /home/hep/maruyama/cjd62/CUORE/Simulations/th232_all
 # Where the sources are to be located. Include '-' and '\' before '(', e.g. '-W\(0,0,52\)'
@@ -30,8 +32,10 @@ Simulation_Name: Script_Testing
 [g4cuore_options]
 # /path/to/ g4cuore version
 g4cuore_Location = g4cuore-t16.03
-# Directory to place g4cuore script and files
-g4cuore_Output_Dir = ${general_options:Local_Script_Dir}/g4cuore
+# Directory to place g4cuore script
+g4cuore_Script_Dir = ${general_options:Local_Script_Dir}/g4cuore
+# Directory to place g4cuore output
+g4cuore_Storage_Dir = ${general_options:Local_Storage_Dir}/g4cuore
 # Input files from qshields
 Input_File_List: ${qshields_options:Simulation_Name}
 # Number of files to use
@@ -80,10 +84,18 @@ Email_From_Host: ae
 User_Email: christopher.davis@yale.edu
 
 [database_options]
+# Directory for the script to be placed
+DB_Script_Dir: {general_options:Local_Script_Dir}/db
 # Location of the database
 DB_Location: localhost
+# Port of the database
+DB_Port: 27012
+# Database name
+DB_Database: CUORE_MC_database
+# Database collection
+DB_Collection: CUORE_MC_list
 # your username
-DB_Username: cuore
+DB_Username: CUORE
 # Which cluster made the MC (Yale_HPC, CNAF, ULITE, PDSF, etc.)
 Cluster_Used: Yale_HPC
 # Your name
