--- a/qshields.cfg
+++ b/qshields.cfg
@@ -23,7 +23,7 @@ Other_qshields_Parameters:
 # Name of qshields in your /cuoremc/bin
 qshields_Location: MCuoreZ-t16.03
 # Name of the simulation output.root files
-Simulation_Name: Script_Testing
+qshields_Simulation_Name: Script_Testing
 
 # Syntax for options:
 	# 1) If unused, leave blank.
@@ -37,11 +37,11 @@ g4cuore_Script_Dir = ${general_options:Local_Script_Dir}/g4cuore
 # Directory to place g4cuore output
 g4cuore_Storage_Dir = ${general_options:Local_Storage_Dir}/g4cuore
 # Input files from qshields
-Input_File_List: ${qshields_options:Simulation_Name}
+Input_File_List: ${qshields_options:qshields_Simulation_Name}
 # Number of files to use
 Input_File_List_Size: ${queue_options:Number_Of_Jobs}
 # Destination of g4cuore output file on your local machine
-Output_File: ${general_options:Local_Script_Dir}/${qshields_options:Simulation_Name}_g4cuore.root
+g4cuore_Output_File_Name: ${qshields_options:qshields_Simulation_Name}_g4cuore.root
 # -d option
 Coincidence_Time: -d 0.01
 # -D option
@@ -71,7 +71,7 @@ Queue: hep
 # Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time. It is also recommended to use <800 since hadd can run into issues with too many files.
 Number_Of_Jobs: 10
 # Name of the job in the queue.
-Job_Name: ${qshields_options:Simulation_Name}
+Job_Name: ${qshields_options:qshields_Simulation_Name}
 # Where the output ROOT files will go
 Root_Output_Dir: ${general_options:Local_Storage_Dir}/root_files
 # Where the Stderr and Stdout files will be placed
@@ -85,7 +85,7 @@ User_Email: christopher.davis@yale.edu
 
 [database_options]
 # Directory for the script to be placed
-DB_Script_Dir: {general_options:Local_Script_Dir}/db
+DB_Script_Dir: ${general_options:Local_Script_Dir}/db
 # Location of the database
 DB_Location: localhost
 # Port of the database
@@ -109,6 +109,6 @@ Git_Is_Tag_Version: yes
 # name of the Git tag version
 Git_Tag_Name: 16.03
 # Where the file is currently hosted
-qshields_Storage_Location: ULITE:/nfs/cuore1/simulation/CUORE/path/to/${qshields_options:simulation_name}
+qshields_Storage_Location: ULITE:/nfs/cuore1/simulation/CUORE/path/to/${qshields_options:qshields_Simulation_Name}
 # Describe the simulation
 Comments: Description of the simulation
