--- a/qshields.cfg
+++ b/qshields.cfg
@@ -11,7 +11,7 @@ Write_to_DB: yes
 
 [qshields_options]
 qshields_Script_Dir: ${general_options:Local_Script_Dir}/qshields
-qshields_Storage_Dir: ${general_options:Local_Storage_Dir}/qshields
+qshields_Storage_Dir: ${general_options:Local_Storage_Dir}/qshields_root_files
 # Include '-' for the types, e.g. "-e 10"
 Source: -G /home/hep/maruyama/cjd62/CUORE/Simulations/th232_all
 # Where the sources are to be located. Include '-' and '\' before '(', e.g. '-W\(0,0,52\)'
@@ -73,9 +73,9 @@ Number_Of_Jobs: 10
 # Name of the job in the queue.
 Job_Name: ${qshields_options:qshields_Simulation_Name}
 # Where the output ROOT files will go
-Root_Output_Dir: ${general_options:Local_Storage_Dir}/root_files
+Root_Output_Dir: ${qshields_options:qshields_Storage_Dir}
 # Where the Stderr and Stdout files will be placed
-Log_File_Dir: ${general_options:Local_Storage_Dir}/log			
+Log_File_Dir: ${qshields_options:Local_Storage_Dir}/log	
 # Walltime for each job
 Walltime: 2:00:00
 # ae gives emails at the end and if an error occurs. b sends emails when the job starts
