db script works for upload now. Fixed the write commands so that the correct values come in when they are needed.

--- a/qshields.cfg
+++ b/qshields.cfg
@@ -75,7 +75,7 @@ Job_Name: ${qshields_options:qshields_Simulation_Name}
 # Where the partial output ROOT files will go
 Root_Output_Dir: ${qshields_options:qshields_Storage_Dir}
 # Where the Stderr and Stdout files will be placed
-Log_File_Dir: ${qshields_options:Local_Storage_Dir}/log	
+Log_File_Dir: ${general_options:Local_Storage_Dir}/log	
 # Walltime for each job
 Walltime: 2:00:00
 # ae gives emails at the end and if an error occurs. b sends emails when the job starts
