--- a/qshields.cfg
+++ b/qshields.cfg
@@ -68,7 +68,7 @@ Other_g4cuore_Parameters:
 Batch_Scheduler: PBS			
 # Name of the queue to submit to
 Queue: hep
-# Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time. It is also recommended to use <800 since hadd can run into issues with too many files.
+# Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time.
 Number_Of_Jobs: 10
 # Name of the job in the queue.
 Job_Name: ${qshields_options:qshields_Simulation_Name}
