Changes for MC setup file in config (for ULITE env shenanigans)
Now takes absolute path for qshields and g4cuore

Does a routine check for files existing at the start of the program. Should throw exceptions if there are issues.

--- a/qshields.cfg
+++ b/qshields.cfg
@@ -12,6 +12,10 @@ Write_to_DB: yes
 [qshields_options]
 qshields_Script_Dir: ${general_options:Local_Script_Dir}/qshields
 qshields_Storage_Dir: ${general_options:Local_Storage_Dir}/qshields
+# Does the job need to manually look at the setup file
+Source_Setup_File: no
+# File to setup the MC environment
+MC_Setup_File: 
 # Include '-' for the types, e.g. "-e 10"
 Source: -G /home/hep/maruyama/cjd62/CUORE/Simulations/th232_all
 # Where the sources are to be located. Include '-' and '\' before '(', e.g. '-W\(0,0,52\)'
@@ -20,8 +24,8 @@ Source_Location: -W\(0,0,52\) -P\(29.5,0,0\) -W\(0,0,52\) -P\(-29.5,0,0\)
 Total_Number_Of_Events: 1e7
 # Any additional parameters to be run
 Other_qshields_Parameters:
-# Name of qshields in your /cuoremc/bin
-qshields_Location: MCuoreZ-t16.03
+# /path/to/qshields
+qshields_Location: /cmn/cuore/cuoremc/bin/9.6.p03/MCuoreZ-t16.03
 # Name of the simulation output.root files
 qshields_Simulation_Name: Script_Testing
 
@@ -30,8 +34,8 @@ qshields_Simulation_Name: Script_Testing
 	# 2) If used, write as (ignoring quotes) "-r 98", where -r is for the option name
 
 [g4cuore_options]
-# /path/to/ g4cuore version
-g4cuore_Location = g4cuore-t16.03
+# /path/to/g4cuore
+g4cuore_Location: /cmn/cuore/cuoremc/bin/9.6.p03/g4cuore-t16.03
 # Directory to place g4cuore script
 g4cuore_Script_Dir = ${general_options:Local_Script_Dir}/g4cuore
 # Directory to place g4cuore output
@@ -67,13 +71,13 @@ Other_g4cuore_Parameters:
 # Which batch scheduler to submit jobs to. Currently only supported for PBS
 Batch_Scheduler: PBS			
 # Name of the queue to submit to
-Queue: hep
-# Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time. It is also recommended to use <800 since hadd can run into issues with too many files.
+Queue: cuore
+# Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time.
 Number_Of_Jobs: 10
 # Name of the job in the queue.
 Job_Name: ${qshields_options:qshields_Simulation_Name}
 # Where the partial output ROOT files will go
-Root_Output_Dir: ${qshields_options:qshields_Storage_Dir}
+Root_Output_Dir: ${qshields_options:qshields_Storage_Dir}/root_files
 # Where the Stderr and Stdout files will be placed
 Log_File_Dir: ${general_options:Local_Storage_Dir}/log	
 # Walltime for each job
@@ -97,7 +101,7 @@ DB_Collection: CUORE_MC_list
 # your username
 DB_Username: CUORE
 # Which cluster made the MC (Yale_HPC, CNAF, ULITE, PDSF, etc.)
-Cluster_Used: Yale_HPC
+Cluster_Used: ULITE
 # Your name
 User_Name: Christopher Davis
 # Date the MC was generated: DD:MM:YEAR
