Now with the right file for ULITE

--- a/qshields-ULITE.cfg
+++ b/qshields-ULITE.cfg
@@ -1,9 +1,11 @@
 [general_options]
 # options to help place files in organized directories. Can be manually edited later on.
 # Where to store the scripts to be run
-Local_Script_Dir: /home/cjdavis62/Git/Geant4_HPC_Scripting/DBTest
+Local_Script_Dir: /nfs/cuore1/scratch/cjdavis/DBTest_Scripts
+# Where to place a copy of the config file
+Config_Script_Dir: ${general_options:Local_Script_Dir}/cfg
 # Where to store the output ROOT files
-Local_Storage_Dir: /home/cjdavis62/Git/Geant4_HPC_Scripting/DBTest
+Local_Storage_Dir: /nfs/cuore1/scratch/cjdavis/DBTest_Storage
 Write_qshields: yes
 Write_g4cuore: yes
 Write_to_DB: yes
@@ -13,19 +15,19 @@ Write_to_DB: yes
 qshields_Script_Dir: ${general_options:Local_Script_Dir}/qshields
 qshields_Storage_Dir: ${general_options:Local_Storage_Dir}/qshields
 # Does the job need to manually look at the setup file
-Source_Setup_File: no
+Source_Setup_File: yes
 # File to setup the MC environment
-MC_Setup_File: 
+MC_Setup_File: /nfs/cuore1/simulation/t16.03/sbin/setup-g4.9.6.p03.sh
 # Include '-' for the types, e.g. "-e 10"
-Source: -G /home/hep/maruyama/cjd62/CUORE/Simulations/th232_all
+Source: -G /nfs/cuore1/scratch/cjdavis/simulation/chain_files/th232Chain/th232_all
 # Where the sources are to be located. Include '-' and '\' before '(', e.g. '-W\(0,0,52\)'
 Source_Location: -W\(0,0,52\) -P\(29.5,0,0\) -W\(0,0,52\) -P\(-29.5,0,0\)
 # Total number of events to be distributed to jobs. Can be number, e.g. "10000000", or scientific notation "1e7"
-Total_Number_Of_Events: 1e7
+Total_Number_Of_Events: 3e6
 # Any additional parameters to be run
 Other_qshields_Parameters:
 # /path/to/qshields
-qshields_Location: /cmn/cuore/cuoremc/bin/9.6.p03/MCuoreZ-t16.03
+qshields_Location: /nfs/cuore1/simulation/t16.03/bin/9.6.p03/qshields
 # Name of the simulation output.root files
 qshields_Simulation_Name: Script_Testing
 
@@ -35,7 +37,7 @@ qshields_Simulation_Name: Script_Testing
 
 [g4cuore_options]
 # /path/to/g4cuore
-g4cuore_Location: /cmn/cuore/cuoremc/bin/9.6.p03/g4cuore-t16.03
+g4cuore_Location: /nfs/cuore1/simulation/t16.03/bin/9.6.p03/g4cuore
 # Directory to place g4cuore script
 g4cuore_Script_Dir = ${general_options:Local_Script_Dir}/g4cuore
 # Directory to place g4cuore output
@@ -71,19 +73,15 @@ Other_g4cuore_Parameters:
 # Which batch scheduler to submit jobs to. Currently only supported for PBS
 Batch_Scheduler: PBS			
 # Name of the queue to submit to
-<<<<<<< HEAD
 Queue: cuore
-=======
-Queue: hep
->>>>>>> 269e33792fb98bf902a876b73c8daa36d332fefc
 # Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time.
 Number_Of_Jobs: 10
 # Name of the job in the queue.
 Job_Name: ${qshields_options:qshields_Simulation_Name}
 # Where the partial output ROOT files will go
 Root_Output_Dir: ${qshields_options:qshields_Storage_Dir}/root_files
-# Where the Stderr and Stdout files will be placed
-Log_File_Dir: ${general_options:Local_Storage_Dir}/log	
+# Where the Stderr and Stdout files will be placed. Needs `localhost`on ULITE
+Log_File_Dir: localhost:${general_options:Local_Storage_Dir}/log	
 # Walltime for each job
 Walltime: 2:00:00
 # ae gives emails at the end and if an error occurs. b sends emails when the job starts
