Changed name of qshieldsConfigParser to MC_ScriptGenerator.py
Added option for if the MC is being generated on ULITE to properly handle adding localhost to the stderr and stdout messages

--- a/qshields-ULITE.cfg
+++ b/qshields-ULITE.cfg
@@ -74,14 +74,16 @@ Other_g4cuore_Parameters:
 Batch_Scheduler: PBS			
 # Name of the queue to submit to
 Queue: cuore
+# Set to 'yes' if on ULITE. Adds `localhost:` to Log_File_Dir
+On_ULITE: yes
 # Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time.
 Number_Of_Jobs: 10
 # Name of the job in the queue.
 Job_Name: ${qshields_options:qshields_Simulation_Name}
 # Where the partial output ROOT files will go
 Root_Output_Dir: ${qshields_options:qshields_Storage_Dir}/root_files
-# Where the Stderr and Stdout files will be placed. Needs `localhost`on ULITE
-Log_File_Dir: localhost:${general_options:Local_Storage_Dir}/log	
+# Where the Stderr and Stdout files will be placed. Do not include 'localhost:' for ULITE.
+Log_File_Dir: ${general_options:Local_Storage_Dir}/log	
 # Walltime for each job
 Walltime: 2:00:00
 # ae gives emails at the end and if an error occurs. b sends emails when the job starts
