Updates to the other config files for the ULITE flag

--- a/qshields-hep_hpc.cfg
+++ b/qshields-hep_hpc.cfg
@@ -75,6 +75,7 @@ Batch_Scheduler: PBS
 # Name of the queue to submit to
 Queue: hep
 # Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time.
+On_ULITE: no
 Number_Of_Jobs: 10
 # Name of the job in the queue.
 Job_Name: ${qshields_options:qshields_Simulation_Name}
