--- a/qshields.cfg
+++ b/qshields.cfg
@@ -74,6 +74,7 @@ Other_g4cuore_Parameters:
 Batch_Scheduler: PBS			
 # Name of the queue to submit to
 Queue: hep
+On_ULITE: no
 # Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time.
 Number_Of_Jobs: 10
 # Name of the job in the queue.
