Update to use SLURM. Needs testing

--- a/cfg_examples/qshields-ULITE.cfg
+++ b/cfg_examples/qshields-ULITE.cfg
@@ -72,7 +72,7 @@ Other_g4cuore_Parameters:
 [queue_options]
 # Which batch scheduler to submit jobs to. Currently only supported for PBS
 Batch_Scheduler: PBS			
-# Name of the queue to submit to
+# Name of the queue (PBS) or partition (SLURM) to submit to
 Queue: cuore
 # Set to 'yes' if on ULITE. Adds `localhost:` to Log_File_Dir
 On_ULITE: yes
