--- a/cfg_examples/qshields-hep_hpc.cfg
+++ b/cfg_examples/qshields-hep_hpc.cfg
@@ -72,7 +72,7 @@ Other_g4cuore_Parameters:
 [queue_options]
 # Which batch scheduler to submit jobs to. Currently only supported for PBS
 Batch_Scheduler: PBS			
-# Name of the queue to submit to
+# Name of the queue (PBS) or partition (SLURM) to submit to
 Queue: hep
 # Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time.
 On_ULITE: no
