--- a/cfg_examples/qshields.cfg
+++ b/cfg_examples/qshields.cfg
@@ -70,10 +70,12 @@ Resolution: -R 0,0
 Other_g4cuore_Parameters: 
 
 [queue_options]
-# Which batch scheduler to submit jobs to. Currently only supported for PBS
+# Which batch scheduler to submit jobs to. Currently only supported for PBS and SLURM
+#Batch_Scheduler: SLURM
 Batch_Scheduler: PBS			
-# Name of the queue to submit to
+# Name of the queue (PBS) or partition (SLURM) to submit to
 Queue: hep
+# Set to 'yes' if on ULITE. Adds `localhost:` to Log_File_Dir
 On_ULITE: no
 # Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time.
 Number_Of_Jobs: 10
@@ -85,8 +87,10 @@ Root_Output_Dir: ${qshields_options:qshields_Storage_Dir}/root_files
 Log_File_Dir: ${general_options:Local_Storage_Dir}/log	
 # Walltime for each job
 Walltime: 2:00:00
-# ae gives emails at the end and if an error occurs. b sends emails when the job starts
+# PBS: ae gives emails at the end and if an error occurs. b sends emails when the job starts
+# SLURM: NONE, BEGIN, END, FAIL, REQUEUE, ALL
 Email_From_Host: ae
+#Email_From_Host: END,FAIL
 # user email. !!!!!CHANGE THIS FOR YOUR EMAIL ADDRESS. I DON'T WANT YOUR EMAILS!!!!!
 User_Email: christopher.davis@yale.edu
 
