Fixed missing parameter in older config file

--- a/cfg_examples/qshields.cfg
+++ b/cfg_examples/qshields.cfg
@@ -79,6 +79,8 @@ Queue: hep
 On_ULITE: no
 # Total number of jobs to be created. Good practice is to have <5 hour long jobs for each CPU at a time.
 Number_Of_Jobs: 10
+# Max jobs at a time
+Max_Concurrent_Jobs: 200
 # Name of the job in the queue.
 Job_Name: ${qshields_options:qshields_Simulation_Name}
 # Where the partial output ROOT files will go
